--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
         <h1>Selamat Datang di Portofolio Saya</h1>
     </header>
     <main>
-        <section>
-            <h2>Tentang Saya</h2>
-            <p>Deskripsi singkat tentang diri Anda.</p>
-        </section>
-        <section>
-            <h2>Proyek Saya</h2>
-            <ul>
-                <li>Proyek 1</li>
-                <li>Proyek 2</li>
-                <li>Proyek 3</li>
-            </ul>
-        </section>
+    <section>
+        <h2>Tentang Saya</h2>
+        <p>Deskripsi singkat tentang diri Anda.</p>
+    </section>
+    <section>
+        <h2>Proyek Saya</h2>
+        <ul>
+            <li>Proyek 1</li>
+            <li>Proyek 2</li>
+            <li>Proyek 3</li>
+        </ul>
+        <button id="myButton">Klik saya!</button>
+    </section>
     </main>
     <footer>
         <p>&copy; 2024 Rizky Akbar Dwi Alvaridzi</p>
