--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,19 +11,23 @@
         <h1>Selamat Datang di Portofolio Saya</h1>
     </header>
     <main>
-    <section>
-        <h2>Tentang Saya</h2>
-        <p>Deskripsi singkat tentang diri Anda.</p>
-    </section>
-    <section>
-        <h2>Proyek Saya</h2>
-        <ul>
-            <li>Proyek 1</li>
-            <li>Proyek 2</li>
-            <li>Proyek 3</li>
-        </ul>
-        <button id="myButton">Klik saya!</button>
-    </section>
+        <section>
+            <h2>Tentang Saya</h2>
+            <p>Deskripsi singkat tentang diri Anda.</p>
+        </section>
+        <section>
+            <h2>Proyek Saya</h2>
+            <ul>
+                <li>Proyek 1</li>
+                <li>Proyek 2</li>
+                <li>Proyek 3</li>
+            </ul>
+            <button id="myButton">Klik saya!</button>
+        </section>
     </main>
     <footer>
-        <p>&copy; 2024 Rizky Akbar Dwi Alvaridzi</p>
+        <p>&copy; 2024 Nama Anda</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
